Undo z-index fix

--- a/docs/src/scss/ds.scss
+++ b/docs/src/scss/ds.scss
@@ -198,7 +198,6 @@ h6 {
 
 .ds-dropdown {
   position: relative;
-  z-index: 4;
 
   &__items {
     position: absolute;
